--- a/build.gradle
+++ b/build.gradle
@@ -13,5 +13,5 @@ sourceSets {
 }
 
 dependencies {
-	compile fileTree(dir: 'libs', include: '*.jar')
+	compile fileTreir: 'libs', include: '*.jar')
 }
